clusters/app.ci/release-controller/deploy-ocp-arm64-priv-controller.yaml
#---------------------------------------------------------------------------------
# osd_rc_deployments.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: release-controller-ocp-arm64-priv
  namespace: ci
spec:
  host: openshift-release-arm64-priv.apps.ci.l2s4.p1.openshiftapps.com
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: Reencrypt
  to:
    kind: Service
    name: release-controller-api-ocp-arm64-priv
---
#---------------------------------------------------------------------------------
# osd_rc_deployments.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: release-controller-arm64-priv-tls
  labels:
    app: release-controller-ocp-arm64-priv
  name: release-controller-ocp-arm64-priv
  namespace: ci
spec:
  ports:
  - name: main
    port: 443
    targetPort: 8443
  selector:
    app: release-controller-ocp-arm64-priv
---
#---------------------------------------------------------------------------------
# osd_rc_deployments.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: release-controller-api-arm64-priv-tls
  labels:
    app: release-controller-api-ocp-arm64-priv
  name: release-controller-api-ocp-arm64-priv
  namespace: ci
spec:
  ports:
  - name: main
    port: 443
    targetPort: 8443
  selector:
    app: release-controller-api-ocp-arm64-priv
---
#---------------------------------------------------------------------------------
# osd_rc_deployments.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"release-controller:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"controller\")].image"}]'
  name: release-controller-ocp-arm64-priv
  namespace: ci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-controller-ocp-arm64-priv
  template:
    metadata:
      labels:
        app: release-controller-ocp-arm64-priv
    spec:
      containers:
      - args:
        - --repo=https://github.com/openshift/release.git
        - --ref=master
        - --period=30s
        - --root=/tmp/git-sync
        - --max-failures=3
        - --link=release
        command:
        - /git-sync
        image: quay-proxy.ci.openshift.org/openshift/ci:ci_git-sync_v4.3.0
        name: git-sync
        resources:
          requests:
            cpu: '0.5'
            memory: 1Gi
        volumeMounts:
        - mountPath: /tmp/git-sync
          name: release
      - args:
        - -provider=openshift
        - -https-address=:8443
        - -http-address=
        - -email-domain=*
        - -upstream=http://localhost:8080
        - -client-id=system:serviceaccount:ci:release-controller-ocp-arm64-priv
        - -openshift-ca=/etc/pki/tls/cert.pem
        - -openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - '-openshift-sar={"verb": "get", "resource": "imagestreams", "namespace": "ocp-priv"}'
        - '-openshift-delegate-urls={"/": {"verb": "get", "group": "image.openshift.io", "resource": "imagestreams", "namespace": "ocp-priv"}}'
        - -client-secret-file=/var/run/secrets/kubernetes.io/serviceaccount/token
        - -cookie-secret-file=/etc/proxy/secrets/session_secret
        - -tls-cert=/etc/tls/private/tls.crt
        - -tls-key=/etc/tls/private/tls.key
        image: quay.io/openshift/origin-oauth-proxy:4.19
        imagePullPolicy: IfNotPresent
        name: oauth-proxy
        ports:
        - containerPort: 8443
          name: web
        resources:
          requests:
            memory: 50Mi
        volumeMounts:
        - mountPath: /etc/tls/private
          name: internal-tls
        - mountPath: /etc/proxy/secrets
          name: session-secret
      - command:
        - /usr/bin/release-controller
        - --release-namespace=ocp-arm64-priv
        - --prow-config=/etc/config/config.yaml
        - --supplemental-prow-config-dir=/etc/config
        - --job-config=/var/repo/release/ci-operator/jobs
        - --listen=127.0.0.1:8080
        - --prow-namespace=ci
        - --job-namespace=ci-release-arm64-priv
        - --tools-image-stream-tag=release-controller-bootstrap:tools
        - --release-architecture=arm64
        - -v=6
        - --github-token-path=/etc/github/oauth
        - --github-endpoint=http://ghproxy
        - --github-graphql-endpoint=http://ghproxy/graphql
        - --github-throttle=250
        - --jira-endpoint=https://issues.redhat.com
        - --jira-bearer-token-file=/etc/jira/api
        - --plugin-config=/etc/plugins/plugins.yaml
        - --supplemental-plugin-config-dir=/etc/plugins
        - --authentication-message=Pulling these images requires <a href="https://docs.ci.openshift.org/docs/how-tos/use-registries-in-build-farm/">authenticating to the app.ci cluster</a>.
        - --art-suffix=-art-latest-arm64-priv
        - --manifest-list-mode
        image: release-controller:latest
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 3
        name: controller
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 3
          timeoutSeconds: 600
        resources:
          requests:
            memory: 2Gi
        volumeMounts:
        - mountPath: /etc/config
          name: config
          readOnly: true
        - mountPath: /var/repo
          name: release
        - mountPath: /etc/github
          name: oauth
          readOnly: true
        - mountPath: /etc/jira
          name: jira
          readOnly: true
        - mountPath: /etc/plugins
          name: plugins
          readOnly: true
        - mountPath: /etc/kubeconfigs
          name: release-controller-kubeconfigs
          readOnly: true
        - mountPath: /tmp/home
          name: home
        - mountPath: /tmp/git
          name: oc-cache
        - mountPath: /tmp/home/.git-credentials
          name: git-credentials
          subPath: .git-credentials
        - mountPath: /tmp/pull-secret
          name: pull-secret
      serviceAccountName: release-controller-ocp-arm64-priv
      volumes:
      - configMap:
          defaultMode: 420
          name: config
        name: config
      - emptyDir: {}
        name: release
      - name: oauth
        secret:
          defaultMode: 420
          secretName: github-credentials-openshift-merge-robot
      - name: jira
        secret:
          defaultMode: 420
          secretName: jira-credentials-openshift-jira-robot
      - configMap:
          defaultMode: 420
          name: plugins
        name: plugins
      - name: internal-tls
        secret:
          secretName: release-controller-arm64-priv-tls
      - name: session-secret
        secret:
          secretName: release-controller-session-secret
      - name: release-controller-kubeconfigs
        secret:
          defaultMode: 420
          secretName: release-controller-kubeconfigs
      - emptyDir: {}
        name: home
      - emptyDir: {}
        name: oc-cache
      - name: git-credentials
        secret:
          defaultMode: 420
          items:
          - key: .git-credentials
            path: .git-credentials
          secretName: release-controller-oc-git-credentials
      - name: pull-secret
        secret:
          defaultMode: 420
          secretName: release-controller-oc-pull-secret
---
#---------------------------------------------------------------------------------
# osd_rc_deployments.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"release-controller-api:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"controller\")].image"}]'
  name: release-controller-api-ocp-arm64-priv
  namespace: ci
spec:
  replicas: 3
  selector:
    matchLabels:
      app: release-controller-api-ocp-arm64-priv
  template:
    metadata:
      labels:
        app: release-controller-api-ocp-arm64-priv
    spec:
      containers:
      - args:
        - -provider=openshift
        - -https-address=:8443
        - -http-address=
        - -email-domain=*
        - -upstream=http://localhost:8080
        - -client-id=system:serviceaccount:ci:release-controller-ocp-arm64-priv
        - -openshift-ca=/etc/pki/tls/cert.pem
        - -openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - '-openshift-sar={"verb": "get", "resource": "imagestreams", "namespace": "ocp-priv"}'
        - '-openshift-delegate-urls={"/": {"verb": "get", "group": "image.openshift.io", "resource": "imagestreams", "namespace": "ocp-priv"}}'
        - -client-secret-file=/var/run/secrets/kubernetes.io/serviceaccount/token
        - -cookie-secret-file=/etc/proxy/secrets/session_secret
        - -tls-cert=/etc/tls/private/tls.crt
        - -tls-key=/etc/tls/private/tls.key
        image: quay.io/openshift/origin-oauth-proxy:4.19
        imagePullPolicy: IfNotPresent
        name: oauth-proxy
        ports:
        - containerPort: 8443
          name: web
        resources:
          requests:
            memory: 50Mi
        volumeMounts:
        - mountPath: /etc/tls/private
          name: internal-tls
        - mountPath: /etc/proxy/secrets
          name: session-secret
      - command:
        - /usr/bin/release-controller-api
        - --release-namespace=ocp-arm64-priv
        - --artifacts=openshift-release-artifacts-arm64-priv.apps.ci.l2s4.p1.openshiftapps.com
        - --prow-namespace=ci
        - --job-namespace=ci-release-arm64-priv
        - --tools-image-stream-tag=release-controller-bootstrap:tools
        - --release-architecture=arm64
        - -v=6
        - --authentication-message=Pulling these images requires <a href="https://docs.ci.openshift.org/docs/how-tos/use-registries-in-build-farm/">authenticating to the app.ci cluster</a>.
        - --art-suffix=-art-latest-arm64-priv
        - --enable-jira
        - --jira-endpoint=https://issues.redhat.com
        - --jira-bearer-token-file=/etc/jira/api
        image: release-controller-api:latest
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 3
        name: controller
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 3
          timeoutSeconds: 600
        resources:
          requests:
            memory: 2Gi
        volumeMounts:
        - mountPath: /etc/jira
          name: jira
          readOnly: true
        - mountPath: /etc/kubeconfigs
          name: release-controller-kubeconfigs
          readOnly: true
        - mountPath: /tmp/home
          name: home
        - mountPath: /tmp/git
          name: oc-cache
        - mountPath: /tmp/home/.git-credentials
          name: git-credentials
          subPath: .git-credentials
        - mountPath: /tmp/pull-secret
          name: pull-secret
      serviceAccountName: release-controller-ocp-arm64-priv
      volumes:
      - name: jira
        secret:
          defaultMode: 420
          secretName: jira-credentials-openshift-jira-robot
      - name: internal-tls
        secret:
          secretName: release-controller-api-arm64-priv-tls
      - name: session-secret
        secret:
          secretName: release-controller-session-secret
      - name: release-controller-kubeconfigs
        secret:
          defaultMode: 420
          secretName: release-controller-kubeconfigs
      - emptyDir: {}
        name: home
      - emptyDir: {}
        name: oc-cache
      - name: git-credentials
        secret:
          defaultMode: 420
          items:
          - key: .git-credentials
            path: .git-credentials
          secretName: release-controller-oc-git-credentials
      - name: pull-secret
        secret:
          defaultMode: 420
          secretName: release-controller-oc-pull-secret
---
#---------------------------------------------------------------------------------
# osd_files_cache_resources.py added the following resource
#---------------------------------------------------------------------------------

# Resources required to deploy resources for the files-cache on
# the app.ci clusters.
# The release controller creates a files cache stateful set in each ci-release namespace
#         used by a release controller. This is a private instance and we need to place and oauth
#         proxy in front of the normal service.
apiVersion: v1
kind: Service
metadata:
  name: files-cache
  namespace: ci-release-arm64-priv
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: files-cache
---
#---------------------------------------------------------------------------------
# osd_files_cache_resources.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: files-cache-oauth-proxy-tls
  name: files-cache-oauth-proxy
  namespace: ci-release-arm64-priv
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    app: files-cache-oauth-proxy
---
#---------------------------------------------------------------------------------
# osd_files_cache_resources.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: files-cache-oauth-proxy
  namespace: ci-release-arm64-priv
spec:
  host: openshift-release-artifacts-arm64-priv.apps.ci.l2s4.p1.openshiftapps.com
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: Reencrypt
  to:
    kind: Service
    name: files-cache-oauth-proxy
---
#---------------------------------------------------------------------------------
# osd_files_cache_resources.py added the following resource
#---------------------------------------------------------------------------------

# Oauth proxy instance that protects to the private files cache for this private release controller
# instance.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files-cache-oauth-proxy
  namespace: ci-release-arm64-priv
spec:
  selector:
    matchLabels:
      app: files-cache-oauth-proxy
  template:
    metadata:
      labels:
        app: files-cache-oauth-proxy
    spec:
      containers:
      - args:
        - -provider=openshift
        - -https-address=:8443
        - -http-address=
        - -email-domain=*
        - -upstream=http://files-cache.ci-release-arm64-priv:80
        - -client-id=system:serviceaccount:ci-release-arm64-priv:files-cache-oauth
        - -openshift-ca=/etc/pki/tls/cert.pem
        - -openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - '-openshift-sar={"verb": "get", "resource": "imagestreams", "namespace": "ocp-arm64-priv"}'
        - '-openshift-delegate-urls={"/": {"verb": "get", "resource": "imagestreams", "namespace": "ocp-arm64-priv"}}'
        - -client-secret-file=/var/run/secrets/kubernetes.io/serviceaccount/token
        - -cookie-secret-file=/etc/proxy/secrets/session_secret
        - -tls-cert=/etc/tls/private/tls.crt
        - -tls-key=/etc/tls/private/tls.key
        image: quay.io/openshift/origin-oauth-proxy:4.19
        imagePullPolicy: IfNotPresent
        name: oauth-proxy
        ports:
        - containerPort: 8443
          name: web
        volumeMounts:
        - mountPath: /etc/tls/private
          name: internal-tls
        - mountPath: /etc/proxy/secrets
          name: session-secret
      serviceAccountName: files-cache-oauth
      volumes:
      - name: session-secret
        secret:
          secretName: files-cache-session-secret
      - name: internal-tls
        secret:
          secretName: files-cache-oauth-proxy-tls
