clusters/app.ci/release-controller/deploy-ocp-multi-2-controller.yaml
#---------------------------------------------------------------------------------
# osd_rc_deployments.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: release-controller-ocp-multi-2
  namespace: ci
spec:
  host: openshift-release-multi-2.apps.ci.l2s4.p1.openshiftapps.com
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: Edge
  to:
    kind: Service
    name: release-controller-api-ocp-multi-2
---
#---------------------------------------------------------------------------------
# osd_rc_deployments.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: release-controller-ocp-multi-2
  name: release-controller-ocp-multi-2
  namespace: ci
spec:
  ports:
  - name: main
    port: 80
    targetPort: 8080
  selector:
    app: release-controller-ocp-multi-2
---
#---------------------------------------------------------------------------------
# osd_rc_deployments.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: release-controller-api-ocp-multi-2
  name: release-controller-api-ocp-multi-2
  namespace: ci
spec:
  ports:
  - name: main
    port: 80
    targetPort: 8080
  selector:
    app: release-controller-api-ocp-multi-2
---
#---------------------------------------------------------------------------------
# osd_rc_deployments.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"release-controller:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"controller\")].image"}]'
  name: release-controller-ocp-multi-2
  namespace: ci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-controller-ocp-multi-2
  template:
    metadata:
      labels:
        app: release-controller-ocp-multi-2
    spec:
      containers:
      - args:
        - --repo=https://github.com/openshift/release.git
        - --ref=master
        - --period=30s
        - --root=/tmp/git-sync
        - --max-failures=3
        - --link=release
        command:
        - /git-sync
        image: quay-proxy.ci.openshift.org/openshift/ci:ci_git-sync_v4.3.0
        name: git-sync
        resources:
          requests:
            cpu: '0.5'
            memory: 1Gi
        volumeMounts:
        - mountPath: /tmp/git-sync
          name: release
      - command:
        - /usr/bin/release-controller
        - --release-namespace=ocp-multi-2
        - --prow-config=/etc/config/config.yaml
        - --supplemental-prow-config-dir=/etc/config
        - --job-config=/var/repo/release/ci-operator/jobs
        - --listen=:8080
        - --prow-namespace=ci
        - --job-namespace=ci-release-multi-2
        - --tools-image-stream-tag=release-controller-bootstrap:tools
        - --release-architecture=multi-2
        - -v=6
        - --github-token-path=/etc/github/oauth
        - --github-endpoint=http://ghproxy
        - --github-graphql-endpoint=http://ghproxy/graphql
        - --github-throttle=250
        - --jira-endpoint=https://issues.redhat.com
        - --jira-bearer-token-file=/etc/jira/api
        - --plugin-config=/etc/plugins/plugins.yaml
        - --supplemental-plugin-config-dir=/etc/plugins
        - --authentication-message=Pulling these images requires <a href="https://docs.ci.openshift.org/docs/how-tos/use-registries-in-build-farm/">authenticating to the app.ci cluster</a>.
        - --art-suffix=-art-latest-multi-2
        - --manifest-list-mode
        image: release-controller:latest
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 3
        name: controller
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 3
          timeoutSeconds: 600
        resources:
          requests:
            memory: 2Gi
        volumeMounts:
        - mountPath: /etc/config
          name: config
          readOnly: true
        - mountPath: /var/repo
          name: release
        - mountPath: /etc/github
          name: oauth
          readOnly: true
        - mountPath: /etc/jira
          name: jira
          readOnly: true
        - mountPath: /etc/plugins
          name: plugins
          readOnly: true
        - mountPath: /etc/kubeconfigs
          name: release-controller-kubeconfigs
          readOnly: true
        - mountPath: /tmp/home
          name: home
        - mountPath: /tmp/git
          name: oc-cache
        - mountPath: /tmp/home/.git-credentials
          name: git-credentials
          subPath: .git-credentials
        - mountPath: /tmp/pull-secret
          name: pull-secret
      serviceAccountName: release-controller-ocp-multi-2
      volumes:
      - configMap:
          defaultMode: 420
          name: config
        name: config
      - emptyDir: {}
        name: release
      - name: oauth
        secret:
          defaultMode: 420
          secretName: github-credentials-openshift-merge-robot
      - name: jira
        secret:
          defaultMode: 420
          secretName: jira-credentials-openshift-jira-robot
      - configMap:
          defaultMode: 420
          name: plugins
        name: plugins
      - name: release-controller-kubeconfigs
        secret:
          defaultMode: 420
          secretName: release-controller-kubeconfigs
      - emptyDir: {}
        name: home
      - emptyDir: {}
        name: oc-cache
      - name: git-credentials
        secret:
          defaultMode: 420
          items:
          - key: .git-credentials
            path: .git-credentials
          secretName: release-controller-oc-git-credentials
      - name: pull-secret
        secret:
          defaultMode: 420
          secretName: release-controller-oc-pull-secret
---
#---------------------------------------------------------------------------------
# osd_rc_deployments.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"release-controller-api:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"controller\")].image"}]'
  name: release-controller-api-ocp-multi-2
  namespace: ci
spec:
  replicas: 3
  selector:
    matchLabels:
      app: release-controller-api-ocp-multi-2
  template:
    metadata:
      labels:
        app: release-controller-api-ocp-multi-2
    spec:
      containers:
      - command:
        - /usr/bin/release-controller-api
        - --release-namespace=ocp-multi-2
        - --artifacts=openshift-release-artifacts-multi-2.apps.ci.l2s4.p1.openshiftapps.com
        - --prow-namespace=ci
        - --job-namespace=ci-release-multi-2
        - --tools-image-stream-tag=release-controller-bootstrap:tools
        - --release-architecture=multi-2
        - -v=6
        - --authentication-message=Pulling these images requires <a href="https://docs.ci.openshift.org/docs/how-tos/use-registries-in-build-farm/">authenticating to the app.ci cluster</a>.
        - --art-suffix=-art-latest-multi-2
        - --enable-jira
        - --jira-endpoint=https://issues.redhat.com
        - --jira-bearer-token-file=/etc/jira/api
        image: release-controller-api:latest
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 3
        name: controller
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 3
          timeoutSeconds: 600
        resources:
          requests:
            memory: 2Gi
        volumeMounts:
        - mountPath: /etc/jira
          name: jira
          readOnly: true
        - mountPath: /etc/kubeconfigs
          name: release-controller-kubeconfigs
          readOnly: true
        - mountPath: /tmp/home
          name: home
        - mountPath: /tmp/git
          name: oc-cache
        - mountPath: /tmp/home/.git-credentials
          name: git-credentials
          subPath: .git-credentials
        - mountPath: /tmp/pull-secret
          name: pull-secret
      serviceAccountName: release-controller-ocp-multi-2
      volumes:
      - name: jira
        secret:
          defaultMode: 420
          secretName: jira-credentials-openshift-jira-robot
      - name: release-controller-kubeconfigs
        secret:
          defaultMode: 420
          secretName: release-controller-kubeconfigs
      - emptyDir: {}
        name: home
      - emptyDir: {}
        name: oc-cache
      - name: git-credentials
        secret:
          defaultMode: 420
          items:
          - key: .git-credentials
            path: .git-credentials
          secretName: release-controller-oc-git-credentials
      - name: pull-secret
        secret:
          defaultMode: 420
          secretName: release-controller-oc-pull-secret
---
#---------------------------------------------------------------------------------
# osd_files_cache_resources.py added the following resource
#---------------------------------------------------------------------------------

# Resources required to deploy resources for the files-cache on
# the app.ci clusters.
# The release controller creates a files cache stateful set in each ci-release namespace
# used by a release controller. Create a service and a route to this public instance.
apiVersion: v1
kind: Service
metadata:
  name: files-cache
  namespace: ci-release-multi-2
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: files-cache
---
#---------------------------------------------------------------------------------
# osd_files_cache_resources.py added the following resource
#---------------------------------------------------------------------------------

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: files-cache
  namespace: ci-release-multi-2
spec:
  host: openshift-release-artifacts-multi-2.apps.ci.l2s4.p1.openshiftapps.com
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: Edge
  to:
    kind: Service
    name: files-cache
